Fix overflow

--- a/src/style.sass
+++ b/src/style.sass
@@ -39,13 +39,13 @@
     font-size: 2em
 
 body
+  overflow: hidden
   background-image: url(https://images.unsplash.com/photo-1489515217757-5fd1be406fef?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80)
   background-size: cover
   background-position-y: 100%
   height: 100vh
   user-select: none
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-  background-color: #5c92eb
   text-align: center
   .only-title
     color: #0d4480
@@ -139,13 +139,14 @@ body
       width: 300px
       height: 4em
       border: none
+      border-radius: 0
       border-bottom-left-radius: 25px
       border-bottom-right-radius: 25px
       text-align: center
       font-weight: bolder
       outline: none
       font-size: 1.4em
-      background-color: #ffffff5b
+      background-color: #ffffffa1
       text-transform: capitalize
       &::placeholder
         color: #0D4480
